<resources>
    <string name="app_name">Parstagram</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="posted_image">Posted Image</string>
    <string name="take_picture">Take Picture</string>
    <string name="description">Description</string>
    <string name="sign_up">Sign Up</string>
    <string name="logo">Logo</string>
    <string name="log_out">Log Out</string>
    <string name="post_username">Post Username</string>
    <string name="post_description">Post Description</string>
    <string name="compose">Compose</string>
    <string name="post">Post</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>